# PhishGuard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirement-dev.txt  requirements.txt  text.txt
.github/workflows/: data-pipeline.yml  pr-validation.yml
phishguard/: __init__.py  config.py  engine.py  main.py
phishguard/cache/: __init__.py  redis_client.py
phishguard/forensics/: __init__.py  rdap.py  ssl_check.py
phishguard/models/: __init__.py  schemas.py
phishguard/models/ml/: __init__.py  evaluate.py  features.py  model.py  split.py  train.py
phishguard/utils/: __init__.py  brand_loader.py  logging_config.py  url_parser.py
scripts/: __init__.py  _common.py  fetch_phishtank.py  fetch_tranco.py
tests/: conftest.py
tests/integration/: test_api_classify.py  test_api_health.py
tests/unit/: test_fetch_common.py  test_fetch_phishtank.py  test_fetch_tranco.py  test_schemas.py  test_url_parser.py
